--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <header>
                 <nav class="navbar fixed-top navbar-expand-md navbar-transparant animated fadeIn navbar-dark bg-dark">
                         <div class="container-fluid">
-                        <a href="#" class="logo pr-4"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
+                        <a href="index.html" class="logo pr-4"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -55,7 +55,7 @@
 
     </header>
     <div class="content-filler">
-            <div class="container-fluid fixed-attachment py-5" id="about" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');height: 60vh;">
+            <div class="container-fluid fixed-attachment py-5" id="about" style="background-image: url('backgroundimage.jpeg');height: 60vh;">
            <div class="bg-infor py-5">
                 <h2 class="display-4 py-5 text-primary">
                         about us
@@ -67,10 +67,15 @@
                 <div class="container">
                   <div class="row py-3">
                     <article class="col-sm-6 align-self-center">
-                      <h4 class="font-weight-bolder">Our story</h4>
+                      <h4 class="text-center font-weight-bolder pt-3">Our story</h4>
                         <p class="story">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, porro reiciendis reprehenderit cum vitae necessitatibus perferendis perspiciatis exercitationem 
-                            est quod quaerat neque deserunt! Alias omnis vitae, reiciendis recusandae dolor iusto. <br>
+                          Over the years we have helped startups find a place to call
+                          home in the online world by improving their visibility online 
+                          and driving more audience to them through the use of extensive
+                          marketing. Within the short time we’ve been around we have 
+                          built a reputation for pure undiluted devotion and commitment to our clients. 
+                          <a class="mail" href="mailto:#">How can we help you?</a>
+                          <br>
                          </p>
                     </article>
                     <aside class="col-sm-6 align-self-center">
@@ -84,10 +89,12 @@
                             <img src="outsourcingicon.5d5b5987.svg" alt="our team">
                           </aside>
                         <article class="col-sm-6 align-self-center">
-                          <h4 class="font-weight-bolder mt-0">How we work</h4>
-                            <p class="story mt-0">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, porro reiciendis reprehenderit cum vitae necessitatibus perferendis perspiciatis exercitationem 
-                                est quod quaerat neque deserunt! Alias omnis vitae, reiciendis recusandae dolor iusto. <br>
+                          <h4 class="font-weight-bolder text-center pt-3">How we work</h4>
+                            <p class="story">
+                              We provide internet marketing for clients and a platform to be heard by a 
+                              vast audience. We believe in personal/direct interaction with consumers so we 
+                              provide services aimed at helping brands listen in on people’s opinion and views on your brand and an 
+                              avenue for you to chime in whilst improving the brand with these feedbacks.   <br>
                              </p>
                         </article>
                     </div>
