--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <header>
                 <nav class="navbar fixed-top navbar-expand-md navbar-transparant animated fadeIn navbar-dark bg-dark">
                         <div class="container-fluid">
-                        <a href="#" class="logo pr-4"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
+                        <a href="index.html" class="logo pr-4"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -51,7 +51,7 @@
                         </span>
                     </div>
                     </nav>
-                    <div class="container-fluid container4 py-3 fixed-attachment"  style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');">
+                    <div class="container-fluid container4 py-3 fixed-attachment"  style="background-image: url('backgroundimage.jpeg');">
                             <div class="container6">
                                 <div class="container7">
                                  <div class="container" id="contact">
@@ -89,8 +89,8 @@
                                          <h6 class="story">Talk to us</h6>
                                          <p class="story">Call or e-mail us about your online marketing needs.</p>
                                          <div class="story">
-                                            <p> <span class="icon"></span><a href="tel:+0000-0000-000">0000-0000-000</a> </p>
-                                            <p> <span class="icon"></span><a href="mailto:#">youremail@email.com</a> </p>
+                                            <p> <span class="icon"></span><a class="mail" href="tel:+0000-0000-000">0000-0000-000</a> </p>
+                                            <p> <span class="icon"></span><a class="mail" href="mailto:#">youremail@email.com</a> </p>
                                          </div>
                                          <h6 class="story">Connect with us</h6>
                                          <div class="social-media">
