--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
                 <nav class="navbar fixed-top navbar-expand-md navbar-transparant animated fadeIn navbar-dark bg-dark">
                         <div class="container-fluid">
-                        <a href="#" class="logo"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
+                        <a href="#home" class="logo"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -53,63 +53,63 @@
                     </nav>
 
     </header>
-    <div class="text-center fill-screen container-fluid container4 home" id="home" >
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <div class="rowe">
-                            <div class="leftt py-5 mt-5">
-                                <h2 class="font text-primary font-weight-bolder">Open your Business to a World of Endless Audience</h1>
-                                    <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
-                                    <button class="bg-dark my-4"><a class="nav-link" href="#here">Get Started<span class="icon"></span></a></button>
-                            </div>
-                            <div>
-                               <div class="side-picture pt-3">
-                                    <img  src="connections-2099068_1280.png" alt="People connecting">
-                               </div>
-                            </div>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <div class="bag mt-5 pt-4">
-                            <h4 class="wordCarousel font-weight-bolder">    
-                                <h5 class="text-primary">Get more: </h5>  
-                                <div class="dive"> 
-                                    <ul class="flip4"> 
-                                        <li class="liste text-primary">Creativity</li>
-                                        <li class="liste text-primary">Coverage</li>
-                                        <li class="liste text-primary">Memories</li> 
-                                        <li class="liste text-primary">Engagement</li>  
-                                    </ul>
-                                </div>  
-                            </h4>
-                       </div>
-                            <h2 class="text-primary font-weight-bolder">A Tactical & Creative Social Media Marketing Agency</h2>
-                    <div class="side pt-3">
-                            <img src="croonials-banner-image.webp" alt="Audience">
-                    </div>
-                    <button class="bg-dark my-4"><a class="nav-link" href="contact.html">GET A FREE QUOTE <span class="icon"></span></a></button>
-                        </div>
-                      <div class="carousel-item">
-                        <div class="rowe pt-4 mt-5">
-                            <div class="leftt">
-                                    <h2 class="font text-primary font-weight-bolder">
-                                    Ace Media is one of Nigeria's Leading Social & Digital Marketing
-                                     Agency with Audience of over 25,000 people.
-                                </h2>
-                                     <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
-                                    <button class="bg-dark my-3"><a class="nav-link" href="#here">Get Started<span class="icon"></span></a></button>
-                            </div>
-                            <div>
-                                <div  class="py-5 side-picture">
-                                        <img src="landingillustration.93ae509a.svg" alt="People connecting">
-                                </div>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
+   <div style="background-color: RGB(136, 193, 247);">
+    <section class="text-center container-fluid container4" id="home" >
+      <article id="carouselExampleSlidesOnly" class="carousel  slide" data-ride="carousel" data-interval="3000">
+          <main class="carousel-inner ">
+            <div class="carousel-item active">
+              <div class="rowe">
+                  <div class="leftt pt-3">
+                      <h2 class="font text-primary font-weight-bolder pt-4">Open your Business to a World of Endless Audience</h1>
+                          <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
                   </div>
-    </div>
+                     <div class="side-picture">
+                          <img class="img-responsive" src="connections-2099068_1280.png" alt="People connecting">
+                     </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="bag pt-3">
+                <h4 class="wordCarousel font-weight-bolder">    
+                  <h5 class="text-primary">Get more: </h5>  
+                  <div class="dive"> 
+                      <ul class="flip4"> 
+                          <li class="liste text-primary">Creativity</li>
+                          <li class="liste text-primary">Coverage</li>
+                          <li class="liste text-primary">Memories</li> 
+                          <li class="liste text-primary">Engagement</li>  
+                      </ul>
+                  </div>  
+              </h4>
+             </div>
+                  <h2 class="text-primary font-weight-bolder">A Tactical & Creative Social Media Marketing Agency</h2>
+                  <div class="side py-4">
+                    <img  class="img-responsive" src="croonials-banner-image.webp" alt="Audience">
+            </div>
+        </div>
+            <div class="carousel-item">
+              <div class="rowe">
+                  <div class="leftt pt-3">
+                          <h2 class="font text-primary font-weight-bolder">
+                          Ace Media is one of Nigeria's Leading Social & Digital Marketing
+                           Agency with Audience of over 25,000 people.
+                      </h2>
+                           <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
+                  </div>
+                      <div class="pt-5 side-picture">
+                              <img  src="landingillustration.93ae509a.svg" alt="People connecting">
+                      </div>
+                    </div>
+            </div>
+        </article>
+      </main>
+      <menu class="down-button py-5">
+        <a href="#here" class="btn">
+          <i class="fas fa-arrow-circle-down fa-2x"></i>
+        </a>
+      </menu>
+      </section>
+   </div>
    <!-- <div>
     <i class="fas fa-link"></i>
 <a href="https://www.freepik.com/free-photos-vectors/people">People vector created by stories - www.freepik.com</a>
@@ -122,14 +122,14 @@
     <i class="fas fa-envelope"></i>
     <i class="fas fa-phone-alt"></i>
    </div> -->
-  <div class="container">
+  <div class="container" id="here">
         <div class="row">
-                <div class="col-sm-6 align-self-center" id="here">
+                <div class="col-sm-6 align-self-center" >
                       <h2 class="text-center text-primary py-3">Here To Serve You</h2>
                       <p class="story">
-                          Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                          Perspiciatis eaque consectetur voluptas fuga ex reiciendis quos natus asperiores,
-                           culpa expedita! Qui voluptatum nihil non alias molestias, quasi harum enim aperiam?
+                       <strong> Ace media</strong> is a social media and digital marketing agency that 
+                        is targeted at increasing impression
+                         organically and driving traffic to your brand/business to improve sales. 
                       </p>
                 </div>
                 <div class="col-sm-6 align-self-center">
