--- a/review.html
+++ b/review.html
@@ -13,7 +13,7 @@
         <header>
                 <nav class="navbar fixed-top navbar-expand-md navbar-transparant animated fadeIn navbar-dark bg-dark">
                         <div class="container-fluid">
-                        <a href="#" class="logo"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
+                        <a href="index.html" class="logo"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -54,7 +54,7 @@
 
     </header>
         <div class="container4  fixed-attachment" id="review">
-                <div class="container-fluid fixed-attachment py-5" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');height: 60vh;">
+                <div class="container-fluid fixed-attachment py-5" style="background-image: url('backgroundimage.jpeg');height: 60vh;">
                         <div class="bg-infor py-5" id="services" >
                              <h2 class="display-4 py-5 text-primary">
                                    reviews
