--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
         <header>
                 <nav class="navbar fixed-top navbar-expand-md navbar-transparant animated fadeIn navbar-dark bg-dark">
                         <div class="container-fluid">
-                        <a href="#" class="logo pr-4"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
+                        <a href="index.html" class="logo pr-4"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -54,7 +54,7 @@
 
     </header>
         <div>
-                <div class="container-fluid fixed-attachment py-5" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');height: 60vh;">
+                <div class="container-fluid fixed-attachment py-5" style="background-image: url('backgroundimage.jpeg');height: 60vh;">
                         <div class="bg-infor py-5" id="services" >
                              <h2 class="display-4 py-5 text-primary">
                                     services
@@ -67,44 +67,36 @@
                           <div class="container" >
                                 <h2 class="text-center text-primary py-3">What we Offer</h2>
                           <div class="row">
-                              <aside class="col-sm-4 align-self-center">
-                                  <div class="logoe"><img src="72.png" alt=""></div>
+                              <aside class="col-sm-6 align-self-center">
+                                  <div class="brand-image"><img src="72.png" alt=""></div>
                                   <h3 class="font-weight-bolder">
-                                      Social Media Management Services
+                                      Social Media Marketing Services
                                   </h3>
                                   <p class="story">
-                                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                                      exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
+                                    We provide a massive boost for your business 
+                                    online by making strategic posts, customer - brand interaction and fierce social media marketing. Social media marketing has proven
+                                     to be very effective and very cost friendly. 
                                   </p>
                               </aside>
-                              <section class="col-sm-4 align-self-center">
-                                <div class="logoe"><img src="76.png" alt=""></div>
+                              <section class="col-sm-6 align-self-center">
+                                <div class="brand-image"><img src="76.png" alt=""></div>
                                   <h3 class="font-weight-bolder">
                                       Digital Marketing Services
                                   </h3>
                                   <p class="story">
-                                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                                      exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
+                                    We make your brand simply irresistible that
+                                     everyone would have no choice but to stop and pay attention to what you have to offer. This is made possible by 
+                                    strategic digital marketing and promotions.
                                   </p>
                               </section>
-                              <aside class="col-sm-4 align-self-center">
-                                <div class="logoe"><img src="74.png" alt=""></div>
-                                  <h3 class="font-weight-bolder">
-                                    Business Branding Services
-                                  </h3>
-                                  <p class="story">
-                                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                                      exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                                  </p>
-                              </aside>
                               <div class="container br" id="approach">
                                     <h2 class="text-center text-primary py-3">Our approach</h2>
                                     <h3 class="under-title text-center font-weight-bolder pb-3">Three things that make us unique</h3>
                                     <div class="row">
                                         <aside class="col-sm-4 align-self-center">
-                                            <div class="logoe"><img src="77.png" alt=""></div>
+                                            <div class="brand-image"><img src="77.png" alt=""></div>
                                             <h3 class="font-weight-bolder">
-                                                We engage
+                                                CUSTOMER -BRAND INTERACTION
                                             </h3>
                                             <p class="story">
                                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
@@ -112,7 +104,7 @@
                                             </p>
                                         </aside>
                                         <section class="col-sm-4 align-self-center">
-                                            <div class="logoe"><img src="75.png" alt=""></div>
+                                            <div class="brand-image"><img src="75.png" alt=""></div>
                                             <h3 class="font-weight-bolder">
                                                 We influence
                                             </h3>
@@ -122,7 +114,7 @@
                                             </p>
                                         </section>
                                         <aside class="col-sm-4 align-self-center">
-                                            <div class="logoe"><img src="76.png" alt=""></div>
+                                            <div class="brand-image"><img src="76.png" alt=""></div>
                                             <h3 class="font-weight-bolder">
                                                We promote
                                             </h3>
